[package]
name = "wraithswap-poc"
version = "0.1.0"
edition = "2021"
description = "PoC for WraithSwap - validating eigenwallet ASB integration"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
anyhow = "1"
dirs = "5"
chrono = "0.4"
colored = "2"
